--- a/staticfiles/website/css/base.css
+++ b/staticfiles/website/css/base.css
@@ -9,12 +9,38 @@
     --fade: rgba(168,168,168, 0.9);
     --submit-green: #50C878;
     --red: red;
+    --background-color: #2b2b2b;
+    --text-color : white;
+    --alt-text-color: black;
+    --filter-to-text-color: brightness(0) saturate(100%) invert(99%) sepia(6%) saturate(2%) hue-rotate(103deg) brightness(106%) contrast(100%);
+    --bubble-border-color: rgba(230, 215, 215, 0.3);
+    --popup-border-color: rgba(14, 30, 37, 0.12);
+}
+
+[data-theme='light']{
+    --accent: #00a8e8;
+    --dark-accent: #008cc3;
+    --green: #228B22;
+    --fade: rgba(168,168,168, 0.9);
+    --submit-green: #50C878;
+    --red: red;
+    --background-color: white;
+    --text-color : black;
+    --alt-text-color: white;
+    --filter-to-text-color: brightness(0) saturate(100%);
+    --bubble-border-color: rgba(60, 64, 67, 0.3);
+    --popup-border-color: rgba(183, 218, 233, 0.12);
 }
 
 /* set font for website*/
 html{
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    background-color: var(--background-color);
+}
+
+*{
+    color: var(--text-color);
 }
 
 /* remove padding from screen*/
@@ -110,7 +136,6 @@ body { margin: 0; padding: 0;}
     }
     #popup{
         width: fit-content;
-        background-color: white;
         z-index: 5;
     }
     .closebutton{
@@ -227,7 +252,7 @@ body { margin: 0; padding: 0;}
 .nav{
     display: flex;
     width: 100%;
-    background-color: white;
+    background-color: var(--background-color);
     justify-content: space-between;
     align-items: center;
     position: fixed;
@@ -277,6 +302,7 @@ body { margin: 0; padding: 0;}
     -webkit-transition: background-color 250ms linear;
     -ms-transition: background-color 250ms linear;
     transition: background-color 250ms linear;
+    filter: var(--filter-to-text-color);
 }
 .accountimg:hover{
     cursor: pointer;
@@ -284,6 +310,7 @@ body { margin: 0; padding: 0;}
     -webkit-transition: background-color 250ms linear;
     -ms-transition: background-color 250ms linear;
     transition: background-color 250ms linear;
+    filter: none;
 }
 
 .hover-underline-animation {
@@ -319,7 +346,7 @@ body { margin: 0; padding: 0;}
     position: fixed;
     display: flex;
     justify-content: center;
-    background-color: white;
+    background-color: var(--background-color);
     z-index: 4;
     
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -327,9 +354,8 @@ body { margin: 0; padding: 0;}
 }
 .corner{
     position: absolute;
-    
+    background-color: var(--background-color);
     transform: rotate(45deg);
-    background-color: white;
     box-shadow: rgba(0, 0, 0, 0.24) -.5px -.5px 0px;
     border: none;
 }
@@ -415,9 +441,10 @@ body { margin: 0; padding: 0;}
     position: fixed;
     right: 10px;
     top: 10px;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-radius: 10px;
+    border: 1px solid var(--accent);
     align-items: center;
-    background-color: white;
+    background-color: var(--background-color);
     z-index: 5;
 }
 
@@ -426,7 +453,7 @@ body { margin: 0; padding: 0;}
 }
 
 .closebutton{
-    filter: brightness(0) saturate(100%);
+    filter: var(--filter-to-text-color);
     -webkit-transition: transform 250ms linear;
     -ms-transition: transform 250ms linear;
     transition: transform 250ms linear;
@@ -443,4 +470,5 @@ body { margin: 0; padding: 0;}
 #page{
     display: flex;
     flex-wrap: wrap;
+    background-color: var(--background-color);
 }
