--- a/staticfiles/website/css/home.css
+++ b/staticfiles/website/css/home.css
@@ -168,12 +168,12 @@
     background-color: var(--accent);
     justify-content: center;
     align-items: center;
-    color: white;
     font-weight: 700;
     flex-wrap: wrap;
     align-content: center;
 }
 #banner p{
+    color: white;
     width: 100%;
     text-align: center;
     margin: 0;
@@ -191,7 +191,6 @@
     margin: 0;
 }
 .loginbutton, .logoutbutton{
-    color: white;
     font-style: italic;
     font-size: 1.1em;
     padding: 5px;
@@ -200,13 +199,13 @@
     border-radius: 20px;
     border: 2px solid white;
     background-color: white;
-    color: black;
     -webkit-transition: transform 250ms linear;
     -ms-transition: transform 250ms linear;
     transition: transform 250ms linear;
+    color: black!important;
 }
 .loginbutton:hover, .logoutbutton:hover{
-    color: var(--green);
+    color: var(--green)!important;
     cursor: pointer;
     transform: scale(1.1);
     -webkit-transition: transform 250ms linear;
