--- a/staticfiles/website/css/leaderboards.css
+++ b/staticfiles/website/css/leaderboards.css
@@ -215,7 +215,7 @@
 
 .leaderboardbubble{
     display: flex;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: var(--bubble-border-color) 0px 1px 2px 0px, var(--bubble-border-color) 0px 2px 6px 2px;
     border-radius: 10px;
     overflow-y: auto;
     overflow-x: auto;
