--- a/staticfiles/website/css/loading.css
+++ b/staticfiles/website/css/loading.css
@@ -24,7 +24,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: var(--background-color);
   z-index: 99;
   top: 0;
 }
@@ -43,7 +43,7 @@
     position: absolute;
     width: 80px;
     height: 80px;
-    background-color: white;
+    background-color: transparent;
   }
   .lds-facebook div {
     display: inline-block;
