--- a/website/static/website/css/loading.css
+++ b/website/static/website/css/loading.css
@@ -43,7 +43,7 @@
     position: absolute;
     width: 80px;
     height: 80px;
-    background-color: white;
+    background-color: transparent;
   }
   .lds-facebook div {
     display: inline-block;
