--- a/website/static/website/css/portfolio.css
+++ b/website/static/website/css/portfolio.css
@@ -559,8 +559,8 @@ canvas{
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    background-color: white;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    background-color: var(--background-color)!important;
+    box-shadow: var(--bubble-border-color) 0px 4px 8px -2px, var(--bubble-border-color) 0px 0px 0px 1px;
     max-width: 80%;
     max-height: 80%;
     width: min-content;
