--- a/website/templates/website/start.html
+++ b/website/templates/website/start.html
@@ -2,4 +2,31 @@
 {% load static %}
 
 {% block content %}
+
+<h1 class="header">&#8212; How To Get <span class="accent">Started</span>! &#8212;</h1>
+<div class="entry">
+    <div class="pageimgwrapper">
+        <img src="{% static 'website/images/crypto.jpg'%}" class="pageimg">
+    </div>
+    <div class="sidetext">
+        <p>First, login with your <span class="accent">"@g.ucla.edu"</span> emails, you can't login from any 
+            <span class="red">non-ucla</span> email. This is to prevent
+            people from using multiple accounts which would ruin the leaderboard competition.
+        </p>
+        <p>The best way to get started is with the portfolio page, explore the UI and start buying and selling cryptocurruncies</p>
+        <p>After getting a handle on your portfolio, the next step is to take a look at the leaderboards</p>
+        <p>The leaderboard page updates every hour and contains the leaderboard for all users as well
+            as analytics regarding your portfolio.
+        </p>
+        <p>The trading simulation give you starting funds based on how far into the current "season" you create your account,
+            Each week you will recieve an additional <span class="green">$10,000</span> to your portfolio. This system is setup
+            such that regardless of when you start trading or login to the site, everyone will have the same initial cash.
+        </p>
+        <p>
+            This site is <span class="accent">NEW</span> and likely isn't perfect, if there is anything that is not working
+            correctly or if you have any suggestions and improvements, please email <span class="accent">uclacryptoclub@gmail.com</span>
+        </p>
+    </div>
+</div>
+
 {% endblock %}
