--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -2,4 +2,30 @@
 {% load static %}
 
 {% block content %}
+
+<h1 class="header">&#8212; About <span class="accent">UCLA</span> Crypto! &#8212;</h1>
+<div class="entry">
+    <div class="pageimgwrapper">
+        <img src="{% static 'website/images/crypto.jpg'%}" class="pageimg">
+    </div>
+    <div class="sidetext">
+        <p>In 2009 Bitcoin was released as the first modern cryptocurrency, a year later  in 2010
+            2 young men bought a pizza for <span class="green">10,000</span> bitcoin worth just
+            <span class="green">41$</span> then but worth <span class="green">680,000,000$</span>
+            at the highest price of bitcoin.
+        </p>
+        <p>We can talk about how it was a horrible purchase in hindsight but how were they supposed to know
+            how big crypto has gotten in recent years?</p>
+        <p>In just a few decades, people have been able to revolutionize their financial situation with the 
+            emergence of cryptocurruncies.</p>
+        <p>Despite the now main stream appeal of crypto, there still wasn't a presence of crypto in the UCLA club
+            sphere. That's why we're here.
+        </p>
+        <p>We're looking to fill a void and revolutionize what a club is at the same time, it doesn't need to be
+            a time-commitment, drop by the site at any time to play the simulation and see how you stack up against
+            the rest of UCLA while learning more about crypto.
+        </p>
+    </div>
+</div>
+
 {% endblock %}
