--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/loading.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/portfolio.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/leaderboards.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'website/css/start.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'website/css/about.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'website/css/leadership.css' %}">
         <script src="https://kit.fontawesome.com/496641ee9b.js" crossorigin="anonymous"></script>
         <!-- Stops rotation on mobile devices / to be implemented in future -->
         <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
