--- a/website/templates/website/leadership.html
+++ b/website/templates/website/leadership.html
@@ -2,4 +2,23 @@
 {% load static %}
 
 {% block content %}
+
+<h1 class="header">&#8212; Our <span class="accent">Leadership</span>! &#8212;</h1>
+{% for leader in leaders%}
+<div class="center leader" style="width: 100%;">
+    <img src="{{leader.1}}" class="leaderimg">
+    <div>
+        <div class="text">
+            <p class="name"><strong>Name:</strong><span class="accent"> {{leader.0.name}}</span></p>
+            <p class="role"><strong>Role:</strong><span class="green"> {{leader.0.role}}</span></p>
+            <p class="description">{{leader.0.description}}</p>
+        </div>
+        <div class="socials">
+            {% for social in leader.2%}
+            <img src="{{social.0}}" onclick="location.href = '{{social.1}}';">
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
