added rest function

--- a/website/templates/website/portfolio.html
+++ b/website/templates/website/portfolio.html
@@ -61,6 +61,8 @@
     <div id="instructions" class="portfoliobubble">
         <p class="title"><span class="accent">Hello!</span></p>
         <div class="breaker"></div>
+        <p class="note"><span class="green">Current Season Start: {{season_start}}</span></p>
+        <div class="breaker"></div>
         <div id="instructioncollection">
             <p>Welcome to your portfolio, here you can see your
                 cryptocurrency assets as well as cash you have liquid.
