--- a/website/templates/website/start.html
+++ b/website/templates/website/start.html
@@ -9,8 +9,9 @@
         <img src="{% static 'website/images/crypto.jpg'%}" class="pageimg">
     </div>
     <div class="sidetext">
-        <p>First, login with your <span class="accent">"@g.ucla.edu"</span> emails, you can't login from any 
-            <span class="red">non-ucla</span> email. This is to prevent
+        <p>First, login with your <span class="accent">"@g.ucla.edu"</span> emails, you can't be on the leaderboard
+            from any 
+            <span class="red">non-ucla</span> email but you can still have a portfolio. This is to prevent
             people from using multiple accounts which would ruin the leaderboard competition.
         </p>
         <p>The best way to get started is with the portfolio page, explore the UI and start buying and selling cryptocurruncies</p>
