--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Crypto Club - {{title}}</title>
+        <link rel="icon"href="{% static 'website/favicon.ico' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/base.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/home.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'website/css/hamburgers.css' %}">
